...
                    <TouchableOpacity
                        style={styles.servico_item}
                        activeOpacity={0.7}
                        onPress={() => router.push("/home/(agendar)/unidade")}
                    >
                        <FontAwesome6 name="calendar-plus" size={30} color={theme.primary} />
                        <Text style={styles.servico_text}>Agendar consulta</Text>
                    </TouchableOpacity>

                    <TouchableOpacity
                        style={styles.servico_item}
                        activeOpacity={0.7}
                        onPress={() => router.push("/home/consultas")}
...
