appId: com.anonymous.AgendaSUS
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "http://10.0.2.2:8081"
    timeout: 60000
- tapOn: "http://10.0.2.2:8081"
- extendedWaitUntil:
    visible: "Continue"
    timeout: 20000
    optional: true
- tapOn:
    text: "Continue"
    optional: true
- back:
    optional: true
- extendedWaitUntil:
    visible: "CPF"
    timeout: 30000
- tapOn: "CPF"
- inputText: "${PACIENTE_CPF}"
- tapOn:
    text: "Senha"
    index: 1
- inputText: "${PACIENTE_SENHA}"
- tapOn: "Acessar"
- assertVisible: "Olá, Usuário!"
- tapOn: "Agendar consulta"
- scrollUntilVisible:
    element:
      text: "ESF da Luz"
    direction: DOWN
- tapOn: "ESF da Luz"
- tapOn: "Murilo de Araújo"
- tapOn: "Próximo"
- runScript:
    file: consultar-grade.js
- repeat:
    times: "${output.mesesNavegados}"
    commands:
      - tapOn:
          point: "95%,25%"
- tapOn: "${output.diaDoMes}"
- runScript:
    file: us01-verificar-lista.js
- assertVisible: "${output.horariosEsperados[0]}"